fix: accordion iphone bug

--- a/src/components/SolutionAccordion/index.scss
+++ b/src/components/SolutionAccordion/index.scss
@@ -11,6 +11,7 @@
     border-radius: 12px;
     margin-bottom: 15px;
     overflow: hidden;
+    position: relative;
 
     .active-layer {
         width: 100%;
